--- a/package.json
+++ b/package.json
@@ -1,11 +1,15 @@
 {
   "name": "node-express",
   "version": "1.0.0",
-  "description": "",
+  "description": "Node Express Examples",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node index"
   },
-  "author": "",
-  "license": "ISC"
+  "author": "Marcelo Cavalcanti",
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.16.3"
+  }
 }
